<resources>
    <string name="app_name">SintomApp</string>
    //Variable Del Boton Para Ir Al Login
    <string name="BtnLogin">Inicia Session</string>
    //Variable De La Imagen Del Logo
    <string name="imgLogo">Logo</string>
    //Variable Del Texto A para Crear Cuenta
    <string name="TxTRegistro_A">Tienes Cuenta?</string>
    //Variable Del Texto B para Crear Cuenta Al Hacer Click Redirigira A La Pagina De Registro
    <string name="TxTRegistro_B">Registrate?</string>
    <string name="title_activity_modulo_profesores_menu">ModuloProfesores_Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    //Aqui Ira El Nombre Del Maestro
    <string name="nav_header_title">Juan Perez</string>
    //Correo Del Profesor
    <string name="nav_header_subtitle">JPerez@CorreInsticional.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    //Pestañas Del Menu Del Profesor
    <string name="menu_inicio">Inicio</string>
    <string name="menu_encuesta">Encuesta</string>
    <string name="menu_cursos">Cursos</string>
    <string name="menu_historial">Historial</string>
    <string name="TxtProfesor">Profesor</string>
    <string name="img_perfil_profesor" />
    <string name="nombre_profesor">Juan Perez</string>
    <string name="profesion_profesor">Instructor De Ciencias</string>
    <string name="TxtUltimoRegistor">Ultimo Registro</string>
    <string name="Txt_Ultima_Encuesta">Domingo 20 de Noviembre - 6:45 pm</string>
    <string name="TxtEstado">OK</string>
    <string name="TxtTestado">Estado</string>
    <string name="Txt_Profesor_Estado">HABILITADO</string>
    <string name="txtViewValor">Informacion Personal</string>
    <string name="txtInfoP">Informacion Personal</string>
    <string name="txtPCursos">Cursos</string>
    <string name="txtNCurso1">Q14</string>
    <string name="txtNCurso2">Q10</string>
    <string name="txtCurso3">Q09</string>
    <string name="imgPEstudiante">ImgenPEstudiante</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    //Encuesta de sintomas
    <string name="encuestaSintomas">Encuesta de síntomas</string>
    <string name="preguntaSintomas">Indique a continuación si presenta alguno de los siguientes síntomas</string>
    <string name="sintoma1">Congestión nasal</string>
    <string name="sintoma2">Tos</string>
    <string name="sintoma3">Fiebre</string>
    <string name="sintoma4">Dolor de cabeza</string>
    <string name="sintoma5">Dolor garganta</string>
    <string name="sintoma6">Dolores musculares</string>
    <string name="sintoma7">Fatiga</string>
    <string name="sintoma8">Pérdida de olfato</string>
    <string name="sintoma9">Pérdida del gusto</string>
    <string name="sintoma10">Diarrea o problemas intestinales</string>
    //login
    <string name="txtLogin">Login</string>
    <string name="txtPass">Contraseña</string>
    <string name="btnLogin">Ingresar</string>
    <string name="txtUser">Usuario</string>
    <string name="txtTitleStudent">Estudiante</string>
    <string name="txtsubtitleStudent">Ultimo Registro</string>
    <string name="txtsubtitleStudent2">Estado</string>
    <string name="btnStudent">Encuesta</string>

</resources>