<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityEncuesta" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:background="#3E03A9F4"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/Encuesta"
            android:layout_width="276dp"
            android:layout_height="33dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="sans-serif"
            android:freezesText="true"
            android:text="@string/encuestaSintomas"
            android:textAlignment="gravity"
            android:textAllCaps="true"
            android:textColor="@color/cardview_dark_background"
            android:textDirection="firstStrongRtl"
            android:textSize="21sp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="48dp"
            android:freezesText="true"
            android:text="@string/preguntaSintomas"
            android:textAlignment="gravity"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Encuesta"
            tools:text="Indique a continuación si presenta alguno de los siguientes síntomas" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="631dp"
            android:backgroundTint="#D721F3C9"
            android:contentDescription="@string/sintoma1"
            android:text="@string/sintoma1"
            android:textColor="@color/cardview_dark_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/textView"
            app:layout_constraintTop_toTopOf="@id/textView"
            app:layout_constraintVertical_bias="0.48000002"
            tools:text="@string/sintoma1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="631dp"
            android:backgroundTint="#D721F3C9"
            android:text="@string/sintoma2"
            android:textColor="@color/cardview_dark_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintVertical_bias="0.253"
            tools:text="@string/sintoma2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="553dp"
            android:backgroundTint="#D721F3C9"
            android:text="@string/sintoma3"
            android:textColor="@color/cardview_dark_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/sintoma3" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="553dp"
            android:backgroundTint="#D721F3C9"
            android:text="@string/sintoma4"
            android:textColor="@color/cardview_dark_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/sintoma4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="553dp"
            android:backgroundTint="#D721F3C9"
            android:text="@string/sintoma5"
            android:textColor="@color/cardview_dark_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/sintoma5" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="553dp"
            android:backgroundTint="#D721F3C9"
            android:text="@string/sintoma6"
            android:textColor="@color/cardview_dark_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/sintoma6" />

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="553dp"
            android:backgroundTint="#D721F3C9"
            android:text="@string/sintoma7"
            android:textColor="@color/cardview_dark_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button6"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/sintoma7" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="553dp"
            android:backgroundTint="#D721F3C9"
            android:text="@string/sintoma8"
            android:textColor="@color/cardview_dark_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button7"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/sintoma8" />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="553dp"
            android:backgroundTint="#D721F3C9"
            android:text="@string/sintoma9"
            android:textColor="@color/cardview_dark_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button8"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/sintoma9" />

        <Button
            android:id="@+id/button10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="@dimen/nav_header_vertical_spacing"
            android:backgroundTint="#D721F3C9"
            android:text="@string/sintoma10"
            android:textColor="@color/cardview_dark_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button9"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/sintoma10" />

    </android.support.constraint.ConstraintLayout>