<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/principalPage"
        android:layout_width="352dp"
        android:layout_height="801dp"
        android:background="#3E03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtRegistroB"
            android:layout_width="149dp"
            android:layout_height="24dp"
            android:layout_marginTop="80dp"
            android:text="@string/TxTRegistro_B"
            android:textAlignment="center"
            android:textColor="#D84315"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.833"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BtnLogin"
            app:layout_constraintVertical_bias="0.14" />

        <TextView
            android:id="@+id/txtRegistroA"
            android:layout_width="147dp"
            android:layout_height="24dp"
            android:layout_marginTop="80dp"
            android:text="@string/TxTRegistro_A"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#455A64"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.229"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BtnLogin"
            app:layout_constraintVertical_bias="0.14" />

        <Button
            android:id="@+id/BtnLogin"
            android:layout_width="288dp"
            android:layout_height="53dp"
            android:layout_marginTop="124dp"
            android:background="@android:color/holo_red_dark"
            android:backgroundTint="@android:color/holo_red_dark"
            android:backgroundTintMode="add"
            android:text="@string/BtnLogin"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="185dp"
            android:layout_height="167dp"
            android:layout_marginTop="108dp"
            android:contentDescription="@string/imgLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/imglogo"
            tools:ignore="ImageContrastCheck,ImageContrastCheck,ImageContrastCheck" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>