<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/modulo_Profesor_Inicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PInicio.InicioFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="367dp"
        android:layout_height="729dp"
        android:background="#3E03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <View
            android:id="@+id/divisor3"
            android:layout_width="330dp"
            android:layout_height="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"

            android:layout_marginRight="15dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

        <TextView
            android:id="@+id/TxtTprofesor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/TxtProfesor"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.928"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="330dp"
            android:layout_height="94dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.238"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TxtTprofesor">

            <ImageView
                android:id="@+id/foto_perfil_profesor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/img_perfil_profesor"
                android:src="@mipmap/perfil_profesor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/nombre_profesor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/nombre_profesor"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/foto_perfil_profesor"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.238" />

            <TextView
                android:id="@+id/profesion_profesor"
                android:layout_width="212dp"
                android:layout_height="29dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:text="@string/profesion_profesor"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/foto_perfil_profesor"
                app:layout_constraintTop_toBottomOf="@+id/nombre_profesor"
                app:layout_constraintVertical_bias="0.0" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="330dp"
            android:layout_height="81dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divisor2">

            <TextView
                android:id="@+id/TxtTuRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TxtUltimoRegistor"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_ultima_encuesta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/Txt_Ultima_Encuesta"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TxtTuRegistro" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="330dp"
            android:layout_height="137dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divisor">

            <ProgressBar
                android:id="@+id/Bar_Estado"
                style="@android:style/Widget.Material.Light.ProgressBar"
                android:layout_width="135dp"
                android:layout_height="136dp"
                android:progress="200"
                android:progressTint="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.082"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/txtEstado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TxtEstado"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/Bar_Estado"
                app:layout_constraintEnd_toEndOf="@+id/Bar_Estado"
                app:layout_constraintStart_toStartOf="@+id/Bar_Estado"
                app:layout_constraintTop_toTopOf="@+id/Bar_Estado" />

            <TextView
                android:id="@+id/TxtTestado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TxtTestado"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/TxtEstado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="57dp"
                android:layout_marginBottom="52dp"
                android:text="@string/Txt_Profesor_Estado"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/Bar_Estado" />

        </android.support.constraint.ConstraintLayout>

        <View
            android:id="@+id/divisor"
            android:layout_width="330dp"
            android:layout_height="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"

            android:layout_marginRight="15dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.285"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

        <View
            android:id="@+id/divisor2"
            android:layout_width="330dp"
            android:layout_height="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"

            android:layout_marginRight="15dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.214"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="330dp"
            android:layout_height="228dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.307"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divisor3">

            <TextView
                android:id="@+id/txtInfoPersonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtInfoP"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ListView
                android:id="@+id/lv_InfoP"
                android:layout_width="328dp"
                android:layout_height="204dp"
                android:layout_marginTop="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtInfoPersonal" />

        </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>